Bug 794240: Disable timerthread + close sockets + cleanup tmp-files on shutdown + file permissions. r=jesup