media/webrtc/signaling/src/sipcc/cpr/darwin/cpr_darwin_init.c
@@ -171,14 +171,13 @@ cprPreInit (void)
         CPR_ERROR("%s: MsgQueue Mutex init failure %d\n", fname, returnCode);
         return CPR_FAILURE;
     }
-
+#ifdef CPR_TIMERS_ENABLED
     returnCode = cpr_timer_pre_init();
     if (returnCode != 0) {
         CPR_ERROR("%s: timer pre init failed %d\n", fname, returnCode);
         return CPR_FAILURE;
     }
-
-
+#endif
     return CPR_SUCCESS;
 }
 
