media/webrtc/signaling/src/sipcc/cpr/darwin/cpr_darwin_socket.c
@@ -765,7 +765,7 @@ cpr_inet_pton (int af, const char *src, void *dst)
  *
  *  @param[in] addr - socket fd to bind with the IPC address.
  *  @param[in] name - pointer to the name of socket to bind to.
- *
+ *  @param[in] pid  - process id (only used if name contains %d)
  *
  *  @pre  (name != NULL)
  */
@@ -774,7 +774,7 @@ void cpr_set_sockun_addr (cpr_sockaddr_un_t *addr, const char *name, pid_t pid)
     /* Bind to the local socket */
     memset(addr, 0, sizeof(cpr_sockaddr_un_t));
     addr->sun_family = AF_UNIX;
-    snprintf((char *) addr->sun_path, sizeof(addr->sun_path), "%s_%d", name, pid);
+    snprintf(addr->sun_path, sizeof(addr->sun_path), name, pid);
 }
 
 /* int
